fix: message in methods saveTask, saveSubtask, saveEpic and field counter in InMemoryTaskManager. refactor: field history, method addTask in InMemoryHistoryManager